⬆️  Update JDBC drivers 3.117 → 3.119
**Changelog**

- [`bdeda913`](https://github.com/openlink/virtuoso-opensource/commit/bdeda913250e40acb71b250c4d9b9e3cbe388950) Rebuild JDBC drivers
- [`0e4437c2`](https://github.com/openlink/virtuoso-opensource/commit/0e4437c24fae820863f2cdb52087e811e7a53c35) Updated JDBC driver version
- [`9da02634`](https://github.com/openlink/virtuoso-opensource/commit/9da0263436b3c44fc550498bd374c57a2b78dfd5) Add(partially & modified) pull requrest from github issue #965
- [`865fccff`](https://github.com/openlink/virtuoso-opensource/commit/865fccff9d32d4715b630d0a04ed7a773d08d4c4) Rebuild JDBC drivers
- [`5b7dd5c9`](https://github.com/openlink/virtuoso-opensource/commit/5b7dd5c9b263450b26e9672f15c0858c35cfca51) Updated driver version
- [`de4f668a`](https://github.com/openlink/virtuoso-opensource/commit/de4f668a1bf3b0d3bf29942796fa0664b8b02d7c) Fixed small issue
- [`70c58f00`](https://github.com/openlink/virtuoso-opensource/commit/70c58f008e8342736c07b604b2adfed70afa1565) Do not use new Long/Byte/Short/Character etc.
- [`7e355e84`](https://github.com/openlink/virtuoso-opensource/commit/7e355e848a5b0c51a4bf55fca0e475cd613c775b) Updated Copyright
- [`83f6363a`](https://github.com/openlink/virtuoso-opensource/commit/83f6363a8545642f8661e7a67cf96dcce0eefcf2) Fixed small issues with jdbc testsuite