@@ -102,7 +102,7 @@ public class VirtuosoResultSet implements ResultSet
    {
      Object[] args = new Object[2];
      args[0] = statement.statid;
-     args[1] = new Long(statement.future.hashCode());
+     args[1] = Long.valueOf(statement.future.hashCode());
      statement.connection.removeFuture(statement.connection.getFuture(
     VirtuosoFuture.fetch,args, statement.rpc_timeout));
    }
@@ -120,10 +120,10 @@ public class VirtuosoResultSet implements ResultSet
    {
      Object[] args = new Object[6];
      args[0] = statement.statid;
-     args[1] = new Long(op);
-     args[2] = new Long(firstline);
-     args[3] = new Long(nbline);
-     args[4] = new Long((statement.connection.getAutoCommit()) ? 1 : 0);
+     args[1] = Long.valueOf(op);
+     args[2] = Long.valueOf(firstline);
+     args[3] = Long.valueOf(nbline);
+     args[4] = Long.valueOf((statement.connection.getAutoCommit()) ? 1 : 0);
      args[5] = null;
      statement.future = statement.connection.getFuture(
   VirtuosoFuture.extendedfetch,args, statement.rpc_timeout);
@@ -412,7 +412,18 @@ public class VirtuosoResultSet implements ResultSet
    }
    public void finalize() throws Throwable
    {
-      close();
+      if(pstmt != null)
+      {
+         pstmt.close();
+         pstmt = null;
+      }
+      if (statement != null)
+      {
+         statement.close_rs(false, is_prepared);
+         if (!is_prepared) {
+           statement = null;
+         }
+      }
    }
    void fixReturnedData(openlink.util.Vector data)
    {
@@ -1108,7 +1119,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Boolean(x);
+      row[columnIndex - 1] = Boolean.valueOf(x);
    }
    public void updateByte(int columnIndex, byte x) throws VirtuosoException
    {
@@ -1120,7 +1131,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Byte(x);
+      row[columnIndex - 1] = Byte.valueOf(x);
    }
    public void updateShort(int columnIndex, short x) throws VirtuosoException
    {
@@ -1132,7 +1143,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Short(x);
+      row[columnIndex - 1] = Short.valueOf(x);
    }
    public void updateInt(int columnIndex, int x) throws VirtuosoException
    {
@@ -1144,7 +1155,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Integer(x);
+      row[columnIndex - 1] = Integer.valueOf(x);
    }
    public void updateLong(int columnIndex, long x) throws VirtuosoException
    {
@@ -1156,7 +1167,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Long(x);
+      row[columnIndex - 1] = Long.valueOf(x);
    }
    public void updateFloat(int columnIndex, float x) throws VirtuosoException
    {
@@ -1168,7 +1179,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Float(x);
+      row[columnIndex - 1] = Float.valueOf(x);
    }
    public void updateDouble(int columnIndex, double x) throws VirtuosoException
    {
@@ -1180,7 +1191,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Double(x);
+      row[columnIndex - 1] = Double.valueOf(x);
    }
    public void updateBigDecimal(int columnIndex, BigDecimal x) throws VirtuosoException
    {
