@@ -12,7 +12,7 @@ public class VirtuosoResultSetMetaData implements ResultSetMetaData
       for(int i = 0;i < columns.length;i++)
       {
          VirtuosoColumn col = new VirtuosoColumn(columns[i], dtps[i], conn);
-         hcolumns.put(col,new Integer(i));
+         hcolumns.put(col,Integer.valueOf(i));
          columnsMetaData.insertElementAt(col,i);
       }
    }
@@ -32,7 +32,7 @@ public class VirtuosoResultSetMetaData implements ResultSetMetaData
          VirtuosoColumn col =
       new VirtuosoColumn((openlink.util.Vector)((openlink.util.Vector)vect).elementAt(i),
    conn);
-         hcolumns.put(col,new Integer(i));
+         hcolumns.put(col,Integer.valueOf(i));
          columnsMetaData.insertElementAt(col,i);
       }
    }
